--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="medication_details_dialog.title">Selecione a data e hora de início</string>
     <string name="medication_details_dialog.positive_button">Selecionar</string>
     <string name="medication_details_dialog.negative_button">Cancelar</string>
+
+    <string name="repeat_every_four_hours" translatable="false">4</string>
+    <string name="repeat_every_six_hours" translatable="false">6</string>
+    <string name="repeat_every_eight_hours" translatable="false">8</string>
+    <string name="repeat_every_twelve_hours" translatable="false">12</string>
+    <string name="repeat_custom" translatable="false">Outro</string>
 </resources>
