--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="common.save" >Salvar</string>
     <string name="common.cancel">Cancelar</string>
     <string name="common.select">Selecionar</string>
+    <string name="common.edit">Editar</string>
+    <string name="common.delete">Deletar</string>
 
     <string name="navigation.today_meds_title" >Hoje</string>
     <string name="navigation.my_meds_title">Medicamentos</string>
