--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,9 +34,16 @@
     <string name="meds_taken_action_button">Ingerido</string>
 
     <string name="alarm_permission_dialog_title">Alarmes e lembretes</string>
-    <string name="alarm_permission_dialog_text">Para que os alarmes funcionem, é necessário dar permissão para definir alarmes e lembretes. Se essa permissão não for concedida, os alarmes existentes também não funcionarão.</string>
-    <string name="permission_dialog_confirm">Dar permissão</string>
-    <string name="permission_dialog_cancel">Agora não</string>
+    <string name="alarm_permission_dialog_text">Para que os alarmes funcionem, é necessário dar permissão para definir alarmes e lembretes. Se essa permissão não for concedida, os alarmes atuais também não funcionarão.</string>
+    <string name="alarm_permission_dialog_confirm">Dar permissão</string>
+    <string name="alarm_permission_dialog_cancel">Agora não</string>
 
-    <string name="task_notification_permission_dialog_title">Notificações</string>
+    <string name="notification_permission_dialog_title">Notificações</string>
+    <string name="notification_permission_dialog_text">Para que os alarmes sejam notificados, é necessário dar permissão para enviar notificações. Se essa permissão não for concedida, os alarmes atuais também não funcionarão.</string>
+    <string name="notification_permission_dialog_confirm">Dar permissão</string>
+    <string name="notification_permission_dialog_cancel">Agora não</string>
+    <string name="notification_rationale_dialog_text">Não é possível configurar alarmes sem permissão de notificação. Se você deseja utilizar essa funcionalidade, por favor, vá até as configurações do app e a conceda manualmente.</string>
+    <string name="notification_rationale_dialog_confirm">Vamos lá</string>
+    <string name="notification_rationale_dialog_cancel">Ignorar</string>
+
 </resources>
